<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group1"
        android:checkableBehavior="single">

        <item android:id="@+id/home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home"/>

        <item android:id="@+id/profile"
            android:icon="@drawable/person_24"
            android:title="@string/profile"/>

        <item android:id="@+id/addcustomer"
            android:icon="@drawable/person_add_24"
            android:title="@string/add_customer"/>

    </group>

    <group android:id="@+id/group2">
        <item android:id="@+id/about"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/about"/>
        <item
            android:id="@+id/share"
            android:icon="@drawable/share_24"
            android:title="@string/share"/>
        <item android:id="@+id/logout"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/log_out"/>
    </group>

</menu>