<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginOrSignUp">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/mytoolbar"
            app:title="Digi-Khata"
            app:titleTextColor="@color/amethyst"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark"
            android:layout_height="wrap_content"/>
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:fontFamily="sans-serif-condensed-light"
        android:textColor="@color/amethyst"
        android:text="@string/welcome_to_digi_khata"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_margin="20sp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.cardview.widget.CardView
        android:layout_gravity="center"
        app:cardCornerRadius="20sp"
        android:layout_margin="20sp"
        android:layout_width="110sp"
        android:layout_height="100sp">
        <RelativeLayout
            android:padding="10sp"
            android:background="@drawable/logo"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:text="@string/already_have_an_account_login_here"
        android:layout_marginTop="40sp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/login"
        android:elevation="4sp"
        android:onClick="login_here"
        android:layout_marginTop="10sp"
        android:layout_marginRight="20sp"
        android:layout_marginLeft="20sp"
       android:padding="10sp"
        android:backgroundTint="@color/amethyst"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/don_t_have_account_resgister_yourself_here"
        android:layout_marginTop="30sp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/signup"
        android:elevation="4sp"
        android:padding="10sp"
        android:text="@string/sign_up"
        android:layout_marginTop="10sp"
        android:layout_marginRight="20sp"
        android:layout_marginLeft="20sp"
        android:backgroundTint="@color/amethyst"
        android:onClick="signup_here"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>