<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthenticationActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/mytoolbar"
            app:title="Digi-Khata"
            app:titleTextColor="@color/amethyst"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark"
            android:layout_height="wrap_content"/>
    </com.google.android.material.appbar.AppBarLayout>

  <androidx.cardview.widget.CardView
      android:layout_gravity="center"
      app:cardCornerRadius="20sp"
      android:layout_margin="20sp"
      android:layout_width="110sp"
      android:layout_height="100sp">
      <RelativeLayout
          android:padding="10sp"
          android:background="@drawable/logo"
          android:layout_width="match_parent"
          android:layout_height="match_parent">
      </RelativeLayout>
  </androidx.cardview.widget.CardView>

    <TextView
        android:text="@string/login_to_use_digi_khata"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textColor="@color/amethyst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>



    <com.google.android.material.textfield.TextInputLayout
        android:layout_margin="20sp"
        android:hint="@string/enter_your_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_margin="20sp"
        android:hint="@string/enter_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgot"
        android:onClick="forget_password"
        android:text="@string/forgot_your_password"
        android:layout_gravity="right"
        android:layout_marginRight="20sp"
        android:textColor="@color/teal_200"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/login"
        android:elevation="4sp"
        android:onClick="login_here"
        android:layout_margin="20sp"
        android:padding="10sp"
        android:backgroundTint="@color/amethyst"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>





</LinearLayout>