<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/mytoolbar"
            app:title="Digi-Khata"
            app:titleTextColor="@color/white"
            android:background="@color/antique"
            android:layout_width="match_parent"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark"
            android:layout_height="wrap_content"/>
    </com.google.android.material.appbar.AppBarLayout>

    <Button
        android:id="@+id/addcustomer"
        android:layout_margin="20sp"
        android:textStyle="bold"
        android:elevation="4sp"
        android:padding="10sp"
        android:text="@string/choose_your_customer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <View
        android:layout_margin="20sp"
        android:background="@color/amethyst"
        android:layout_width="match_parent"
        android:layout_height="1sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginLeft="20sp"
        android:hint="@string/enter_customer_name"
        android:layout_marginRight="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/customername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginLeft="20sp"
        android:layout_marginTop="10sp"
        android:hint="@string/enter_customer_phone_number"
        android:layout_marginRight="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/customerphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginLeft="20sp"
        android:layout_marginTop="10sp"
        android:hint="@string/enter_customer_address"
        android:layout_marginRight="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/customeraddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_margin="20sp"
        android:background="@color/amethyst"
        android:layout_width="match_parent"
        android:layout_height="1sp"/>

    <Button
        android:id="@+id/insert"
        android:layout_margin="20sp"
        android:textStyle="bold"
        android:elevation="8sp"
        android:backgroundTint="@color/white"
        android:padding="10sp"
        android:textColor="@color/azure"
        android:text="@string/add_customer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>