<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <com.leo.simplearcloader.SimpleArcLoader
        android:id="@+id/loader"
        android:visibility="invisible"
        app:arc_style="simple_arc"
        android:elevation="6sp"
        android:layout_centerInParent="true"
        android:layout_width="60sp"
        android:layout_height="60sp"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">



    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/mytoolbar"
            app:title="Digi-Khata"
            app:titleTextColor="@color/amethyst"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark"
            android:layout_height="wrap_content"/>
    </com.google.android.material.appbar.AppBarLayout>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_gravity="center"
                app:cardCornerRadius="20sp"
                android:layout_margin="20sp"
                android:layout_width="110sp"
                android:layout_height="100sp">
                <RelativeLayout
                    android:padding="10sp"
                    android:background="@drawable/logo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:text="@string/create_your_account"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:textColor="@color/amethyst"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>



            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="20sp"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:inputType="text"
                    android:hint="@string/enter_your_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="10sp"
                android:layout_marginRight="20sp"
                android:layout_marginLeft="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/companyname"
                    android:inputType="text"
                    android:hint="@string/enter_your_company_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="10sp"
                android:layout_marginRight="20sp"
                android:layout_marginLeft="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:inputType="textEmailAddress"
                    android:hint="@string/enter_your_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="10sp"
                android:layout_marginRight="20sp"
                android:layout_marginLeft="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone"
                    android:inputType="phone"
                    android:hint="@string/enter_your_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="10sp"
                android:layout_marginRight="20sp"
                android:layout_marginLeft="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/createpassword"
                    android:inputType="textPassword"
                    android:hint="@string/create_your_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="10sp"
                android:layout_marginRight="20sp"
                android:layout_marginLeft="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirmpassword"
                    android:inputType="textPassword"
                    android:hint="@string/confirm_your_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/register"
                android:elevation="4sp"
                android:layout_margin="20sp"
                android:padding="10sp"
                android:backgroundTint="@color/amethyst"
                android:text="@string/create_your_account"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </ScrollView>
    </LinearLayout>
</RelativeLayout>