<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragmentsLayer.HomeFragment">

   <androidx.cardview.widget.CardView
       android:id="@+id/c1"
       android:elevation="8sp"
       android:layout_margin="20sp"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       <RelativeLayout
           android:padding="20sp"
           android:layout_width="match_parent"
           android:layout_height="match_parent">
           <TextView
               android:id="@+id/t1"
               android:text="@string/total_report"
               android:textColor="@color/red"
               android:layout_centerHorizontal="true"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>
           <TextView
               android:id="@+id/t2"
               android:text="55"
               android:textColor="@color/green"
               android:textStyle="bold"
               android:textSize="16sp"
               android:layout_below="@+id/t1"
               android:layout_marginLeft="30sp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>
           <TextView
               android:id="@+id/t3"
               android:text="@string/you_will_give"
               android:textStyle="italic"
               android:layout_below="@+id/t2"
               android:layout_marginLeft="10sp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>
           <TextView
               android:id="@+id/t4"
               android:text="58"
               android:textColor="@color/red"
               android:textStyle="bold"
               android:textSize="16sp"
               android:layout_below="@+id/t1"
               android:layout_alignParentRight="true"
               android:layout_marginRight="30sp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>
           <TextView
               android:id="@+id/t5"
               android:text="@string/you_will_get"
               android:textStyle="italic"
               android:layout_below="@+id/t4"
               android:layout_alignParentRight="true"
               android:layout_marginRight="10sp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>

       </RelativeLayout>
   </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/search"
        android:layout_below="@+id/c1"
        android:drawableStart="@drawable/ic_baseline_search_24"
        android:layout_marginLeft="20sp"
        android:hint="@string/search_your_customer"
        android:background="@drawable/search_box"
        android:padding="10sp"
        android:drawablePadding="8sp"
        android:layout_marginRight="20sp"
        android:layout_width="match_parent"
        android:layout_height="45sp"/>

    <ListView
        android:id="@+id/listview"
        android:layout_below="@+id/search"
        android:layout_marginTop="15sp"
        android:divider="@null"
        android:scrollbars="none"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/contacts"
        android:layout_alignParentRight="true"
        android:src="@drawable/person_add_24"
        android:elevation="4sp"
        android:layout_alignParentBottom="true"
        android:layout_margin="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="TODO" />

</RelativeLayout>