<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AcountActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/barLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/mytoolbar"
            app:titleTextColor="@color/white"
            android:background="@color/antique"
            android:layout_width="match_parent"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark"
            android:layout_height="wrap_content"/>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:layout_margin="20sp"
        android:elevation="4sp"
        android:id="@+id/result"
        android:layout_below="@+id/barLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:padding="10sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/msg"
                android:text="You will give"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/value"
                android:text="55/-"
                android:layout_alignParentRight="true"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/communicate"
        android:layout_below="@+id/result"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:onClick="calling"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                   android:layout_gravity="center"
                    android:src="@drawable/ic_baseline_call_24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:text="@string/call"
                    android:layout_gravity="center"
                    android:layout_marginTop="5sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:onClick="create_reports"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_gravity="center"
                    android:src="@drawable/ic_baseline_picture_as_pdf_24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:text="@string/reports"
                    android:layout_gravity="center"
                    android:layout_marginTop="5sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:onClick="sms_alert"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_gravity="center"
                    android:src="@drawable/ic_baseline_textsms_24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:text="@string/sms"
                    android:layout_gravity="center"
                    android:layout_marginTop="5sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ListView
        android:id="@+id/listview"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginBottom="10sp"
        android:scrollbars="none"
        android:layout_below="@+id/communicate"
        android:layout_above="@+id/moneyentry"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:id="@+id/moneyentry"
        android:layout_alignParentBottom="true"
        android:padding="10sp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_margin="10sp"
            android:backgroundTint="@color/red"
            android:onClick="gave"
            android:text="@string/you_gave"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:layout_weight="1"
            android:onClick="got"
            android:backgroundTint="@color/green"
            android:text="@string/you_got"
            android:layout_margin="10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</RelativeLayout>